# claude-cq-editor

./: .gitignore  CLAUDE.md  README.md  bracket.py  mechanical_test.py  plate.gcode  plate.py  pyproject.toml  test_model.py
.github/workflows/: ci.yml
src/cq_models/: __main__.py  bracket.py  gravity_well.py  l_bracket.py  t_bracket.py  u_cutter.py
test/: test_bracket.py  test_gravity_well.py  test_l_bracket.py  test_t_bracket.py  test_u_cutter.py
